2005-12-02  Brian Cameron  <brian.cameron@sun.com>

	* README, daemon/gdm.h:  More clear stability
	  information about the gdm.conf file.  Better
	  comments for ADD_DYNAMIC_DISPLAY socket 
	  command.

2005-11-28  Brian Cameron  <brian.cameron@sun.com>

	* Release 2.13.0.2: 
	* NEWS, configure.ac: Updated
	* docs/C/gdm.xml: Updated version/date and
	  added new info about GET_CONFIG command.

2005-11-28  Brian Cameron  <brian.cameron@sun.com>

	* config/Makefile.am:  Ensure gnome.desktop and
	  default.desktop files have 644 perms.  Fixes
	  bug #322600.  Patch provided by Andrew Benton
	  <b3nt@ukonline.co.uk>.
	* daemon/gdmconfig.c:  Correct spelling of 
	  GDM_KEY_XDMCP when HAVE_LIBXDMCP is not 
	  defined.

2005-11-23  Dennis Cranston  <dennis_cranston@yahoo.com>

	* gui/gdmphotosetup.c: (browse_button_cb):
	  Fix a double free.  Remove unused function.

2005-11-23  Dennis Cranston  <dennis_cranston@yahoo.com>

	* gui/gdmphotosetup.c, gui/gdmphotosetup.glade:  
	  Fix bug #317744, "Login photo dialog is awful",
	  by simplifying the dialog.

2005-11-23  Brian Cameron <Brian.Cameron@sun.com>

	* daemon/verify-crypt.c, daemon/verify-pam.c,
	  Convert to using new gdmconfig interfaces.
	* daemon/choose.c, daemon/errorgui.c,
	  daemon/gdm.c, daemon/gdmconfig.c,
	  daemon/misc.c, daemon/slave.c,
	  daemon/xdmcp.c, gui/gdmXnestchooser.c,
	  gui/gdmconfig.c, gui/gdmlogin.c,
	  gui/greeter/greeter_canvas_textm.c:  Fix
	  compiler warnings.  Patch provided by
          Frederic Crozat on gdm-list@gnome.org.
	  Also make sure that all functions have
	  a space before the "(" to better follow
	  coding style guide.

	* daemon/cookie.c, daemon/display.c,
	  daemon/gdm-net.c, daemon/getvt.c, 
	  daemon/md5.c, daemon/server.c, 
	  daemon/verify-pam.c, gui/gdmchooser.c,
	  gui/gdmcommon.c, gui/gdmdynamic.c,
	  gui/gdmlanguages.c, gui/gdmuser.c,
	  gui/greeter/greeter.c,
	  gui/greeter/greeter_action_language.c,
	  gui/greeter/greeter_action_canvas_item.c,