@@ -103,7 +103,7 @@
 			  <property name="justify">GTK_JUSTIFY_LEFT</property>
 			  <property name="wrap">False</property>
 			  <property name="selectable">False</property>
-			  <property name="xalign">0.5</property>
+			  <property name="xalign">0</property>
 			  <property name="yalign">0.5</property>
 			  <property name="xpad">0</property>
 			  <property name="ypad">0</property>
@@ -832,10 +832,11 @@ Random from selected
 
 			      <child>
 				<widget class="GtkScrolledWindow" id="local_theme_scrolled_window">
+				  <property name="width_request">350</property>
 				  <property name="visible">True</property>
 				  <property name="can_focus">True</property>
-				  <property name="hscrollbar_policy">GTK_POLICY_ALWAYS</property>
-				  <property name="vscrollbar_policy">GTK_POLICY_ALWAYS</property>
+				  <property name="hscrollbar_policy">GTK_POLICY_NEVER</property>
+				  <property name="vscrollbar_policy">GTK_POLICY_AUTOMATIC</property>
 				  <property name="shadow_type">GTK_SHADOW_IN</property>
 				  <property name="window_placement">GTK_CORNER_TOP_LEFT</property>
 
@@ -1209,72 +1210,10 @@ Random from selected
 			      <property name="spacing">6</property>
 
 			      <child>
-				<widget class="GtkFixed" id="fixed3">
-				  <property name="height_request">12</property>
-				  <property name="visible">True</property>
-				</widget>
-				<packing>
-				  <property name="padding">0</property>
-				  <property name="expand">False</property>
-				  <property name="fill">False</property>
-				</packing>
-			      </child>
-
-			      <child>
-				<widget class="GtkLabel" id="local_theme_backgroud_label">
-				  <property name="visible">True</property>
-				  <property name="label" translatable="yes">Background</property>
-				  <property name="use_underline">False</property>
-				  <property name="use_markup">True</property>
-				  <property name="justify">GTK_JUSTIFY_LEFT</property>
-				  <property name="wrap">False</property>
-				  <property name="selectable">False</property>
-				  <property name="xalign">0</property>
-				  <property name="yalign">0.5</property>
-				  <property name="xpad">0</property>
-				  <property name="ypad">0</property>
-				  <property name="ellipsize">PANGO_ELLIPSIZE_NONE</property>
-				  <property name="width_chars">-1</property>
-				  <property name="single_line_mode">False</property>
-				  <property name="angle">0</property>
-				</widget>
-				<packing>
-				  <property name="padding">0</property>
-				  <property name="expand">False</property>
-				  <property name="fill">False</property>
-				</packing>
-			      </child>
-
-			      <child>
 				<widget class="GtkHBox" id="hbox129">
 				  <property name="visible">True</property>
 				  <property name="homogeneous">False</property>
 				  <property name="spacing">0</property>
-
-				  <child>
-				    <widget class="GtkLabel" id="label206">
-				      <property name="visible">True</property>
-				      <property name="label" translatable="yes">    </property>
-				      <property name="use_underline">False</property>
-				      <property name="use_markup">False</property>
-				      <property name="justify">GTK_JUSTIFY_LEFT</property>
-				      <property name="wrap">False</property>
-				      <property name="selectable">False</property>
-				      <property name="xalign">0.5</property>
-				      <property name="yalign">0.5</property>
-				      <property name="xpad">0</property>
-				      <property name="ypad">0</property>
-				      <property name="ellipsize">PANGO_ELLIPSIZE_NONE</property>
-				      <property name="width_chars">-1</property>
-				      <property name="single_line_mode">False</property>
-				      <property name="angle">0</property>
-				    </widget>
-				    <packing>
-				      <property name="padding">0</property>
-				      <property name="expand">False</property>
-				      <property name="fill">False</property>
-				    </packing>
-				  </child>
 
 				  <child>
 				    <widget class="GtkTable" id="table14">
@@ -1286,26 +1225,9 @@ Random from selected
 				      <property name="column_spacing">12</property>
 
 				      <child>
-					<widget class="GtkColorButton" id="local_background_theme_colorbutton">
-					  <property name="visible">True</property>
-					  <property name="can_focus">True</property>
-					  <property name="use_alpha">False</property>
-					  <property name="title" translatable="yes">Pick Background Color</property>
-					  <property name="focus_on_click">True</property>
-					</widget>
-					<packing>
-					  <property name="left_attach">1</property>
-					  <property name="right_attach">2</property>
-					  <property name="top_attach">0</property>
-					  <property name="bottom_attach">1</property>
-					  <property name="y_options">expand</property>
-					</packing>
-				      </child>
-
-				      <child>
 					<widget class="GtkLabel" id="label207">
 					  <property name="visible">True</property>
-					  <property name="label" translatable="yes">Co_lor:</property>
+					  <property name="label" translatable="yes">Background co_lor:</property>
 					  <property name="use_underline">True</property>
 					  <property name="use_markup">False</property>
 					  <property name="justify">GTK_JUSTIFY_LEFT</property>
@@ -1328,6 +1250,24 @@ Random from selected
 					  <property name="bottom_attach">1</property>
 					  <property name="x_options">fill</property>
 					  <property name="y_options"></property>
+					</packing>
+				      </child>
+
+				      <child>
+					<widget class="GtkColorButton" id="local_background_theme_colorbutton">
+					  <property name="visible">True</property>
+					  <property name="can_focus">True</property>
+					  <property name="use_alpha">False</property>
+					  <property name="title" translatable="yes">Pick Background Color</property>
+					  <property name="focus_on_click">True</property>
+					</widget>
+					<packing>
+					  <property name="left_attach">1</property>
+					  <property name="right_attach">2</property>
+					  <property name="top_attach">0</property>
+					  <property name="bottom_attach">1</property>
+					  <property name="x_options">fill</property>
+					  <property name="y_options">expand</property>
 					</packing>
 				      </child>
 				    </widget>
@@ -1445,7 +1385,7 @@ Random from selected
 			    <widget class="GtkRadioButton" id="sg_defaultwelcome">
 			      <property name="visible">True</property>
 			      <property name="can_focus">True</property>
-			      <property name="label" translatable="yes">_Default message of &quot;Welcome&quot;</property>
+			      <property name="label" translatable="yes">_Default: &quot;Welcome&quot;</property>
 			      <property name="use_underline">True</property>
 			      <property name="relief">GTK_RELIEF_NORMAL</property>
 			      <property name="focus_on_click">True</property>
@@ -1619,7 +1559,7 @@ Random from selected
 		      <property name="spacing">12</property>
 
 		      <child>
-			<widget class="GtkLabel" id="label184">
+			<widget class="GtkLabel" id="remote_stylelabel">
 			  <property name="visible">True</property>
 			  <property name="label" translatable="yes">_Style:</property>
 			  <property name="use_underline">True</property>
@@ -1627,7 +1567,7 @@ Random from selected
 			  <property name="justify">GTK_JUSTIFY_LEFT</property>
 			  <property name="wrap">False</property>
 			  <property name="selectable">False</property>
-			  <property name="xalign">0.5</property>
+			  <property name="xalign">0</property>
 			  <property name="yalign">0.5</property>
 			  <property name="xpad">0</property>
 			  <property name="ypad">0</property>
@@ -2135,7 +2075,7 @@ Same as Local</property>
 				  <property name="spacing">12</property>
 
 				  <child>
-				    <widget class="GtkLabel" id="label208">
+				    <widget class="GtkLabel" id="remote_theme_label">
 				      <property name="visible">True</property>
 				      <property name="label" translatable="yes">_Theme:</property>
 				      <property name="use_underline">True</property>
@@ -2190,10 +2130,11 @@ Random from selected
 
 				  <child>
 				    <widget class="GtkScrolledWindow" id="scrolledwindow13">
+				      <property name="width_request">350</property>
 				      <property name="visible">True</property>
 				      <property name="can_focus">True</property>
-				      <property name="hscrollbar_policy">GTK_POLICY_ALWAYS</property>
-				      <property name="vscrollbar_policy">GTK_POLICY_ALWAYS</property>
+				      <property name="hscrollbar_policy">GTK_POLICY_NEVER</property>
+				      <property name="vscrollbar_policy">GTK_POLICY_AUTOMATIC</property>
 				      <property name="shadow_type">GTK_SHADOW_IN</property>
 				      <property name="window_placement">GTK_CORNER_TOP_LEFT</property>
 
@@ -2567,72 +2508,10 @@ Random from selected
 				  <property name="spacing">6</property>
 
 				  <child>
-				    <widget class="GtkFixed" id="fixed4">
-				      <property name="height_request">12</property>
-				      <property name="visible">True</property>
-				    </widget>
-				    <packing>
-				      <property name="padding">0</property>
-				      <property name="expand">False</property>
-				      <property name="fill">False</property>
-				    </packing>
-				  </child>
-
-				  <child>
-				    <widget class="GtkLabel" id="remote_theme_background_label">
-				      <property name="visible">True</property>
-				      <property name="label" translatable="yes">Background</property>
-				      <property name="use_underline">False</property>
-				      <property name="use_markup">True</property>
-				      <property name="justify">GTK_JUSTIFY_LEFT</property>
-				      <property name="wrap">False</property>
-				      <property name="selectable">False</property>
-				      <property name="xalign">0</property>
-				      <property name="yalign">0.5</property>
-				      <property name="xpad">0</property>
-				      <property name="ypad">0</property>
-				      <property name="ellipsize">PANGO_ELLIPSIZE_NONE</property>
-				      <property name="width_chars">-1</property>
-				      <property name="single_line_mode">False</property>
-				      <property name="angle">0</property>
-				    </widget>
-				    <packing>
-				      <property name="padding">0</property>
-				      <property name="expand">False</property>
-				      <property name="fill">False</property>
-				    </packing>
-				  </child>
-
-				  <child>
 				    <widget class="GtkHBox" id="hbox134">
 				      <property name="visible">True</property>
 				      <property name="homogeneous">False</property>
 				      <property name="spacing">0</property>
-
-				      <child>
-					<widget class="GtkLabel" id="label214">
-					  <property name="visible">True</property>
-					  <property name="label" translatable="yes">    </property>
-					  <property name="use_underline">False</property>
-					  <property name="use_markup">False</property>
-					  <property name="justify">GTK_JUSTIFY_LEFT</property>
-					  <property name="wrap">False</property>
-					  <property name="selectable">False</property>
-					  <property name="xalign">0.5</property>
-					  <property name="yalign">0.5</property>
-					  <property name="xpad">0</property>
-					  <property name="ypad">0</property>
-					  <property name="ellipsize">PANGO_ELLIPSIZE_NONE</property>
-					  <property name="width_chars">-1</property>
-					  <property name="single_line_mode">False</property>
-					  <property name="angle">0</property>
-					</widget>
-					<packing>
-					  <property name="padding">0</property>
-					  <property name="expand">False</property>
-					  <property name="fill">False</property>
-					</packing>
-				      </child>
 
 				      <child>
 					<widget class="GtkTable" id="remote_theme_background_hbox">
@@ -2644,26 +2523,9 @@ Random from selected
 					  <property name="column_spacing">12</property>
 
 					  <child>
-					    <widget class="GtkColorButton" id="remote_background_theme_colorbutton">
-					      <property name="visible">True</property>
-					      <property name="can_focus">True</property>
-					      <property name="use_alpha">False</property>
-					      <property name="title" translatable="yes">Pick Background Color</property>
-					      <property name="focus_on_click">True</property>
-					    </widget>
-					    <packing>
-					      <property name="left_attach">1</property>
-					      <property name="right_attach">2</property>
-					      <property name="top_attach">0</property>
-					      <property name="bottom_attach">1</property>
-					      <property name="y_options">expand</property>
-					    </packing>
-					  </child>
-
-					  <child>
 					    <widget class="GtkLabel" id="label215">
 					      <property name="visible">True</property>
-					      <property name="label" translatable="yes">Co_lor:</property>
+					      <property name="label" translatable="yes">Background co_lor:</property>
 					      <property name="use_underline">True</property>
 					      <property name="use_markup">False</property>
 					      <property name="justify">GTK_JUSTIFY_LEFT</property>
@@ -2686,6 +2548,24 @@ Random from selected
 					      <property name="bottom_attach">1</property>
 					      <property name="x_options">fill</property>
 					      <property name="y_options"></property>
+					    </packing>
+					  </child>
+
+					  <child>
+					    <widget class="GtkColorButton" id="remote_background_theme_colorbutton">
+					      <property name="visible">True</property>
+					      <property name="can_focus">True</property>
+					      <property name="use_alpha">False</property>
+					      <property name="title" translatable="yes">Pick Background Color</property>
+					      <property name="focus_on_click">True</property>
+					    </widget>
+					    <packing>
+					      <property name="left_attach">1</property>
+					      <property name="right_attach">2</property>
+					      <property name="top_attach">0</property>
+					      <property name="bottom_attach">1</property>
+					      <property name="x_options">fill</property>
+					      <property name="y_options">expand</property>
 					    </packing>
 					  </child>
 					</widget>
@@ -2809,7 +2689,7 @@ Random from selected
 			    <widget class="GtkRadioButton" id="sg_defaultwelcomeremote">
 			      <property name="visible">True</property>
 			      <property name="can_focus">True</property>
-			      <property name="label" translatable="yes">_Default message of &quot;Welcome to %n&quot;</property>
+			      <property name="label" translatable="yes">_Default: &quot;Welcome to %n&quot;</property>
 			      <property name="use_underline">True</property>
 			      <property name="relief">GTK_RELIEF_NORMAL</property>
 			      <property name="focus_on_click">True</property>
@@ -4204,7 +4084,7 @@ Random from selected
 			<widget class="GtkButton" id="config_xserverbutton">
 			  <property name="visible">True</property>
 			  <property name="can_focus">True</property>
-			  <property name="label" translatable="yes">Configure _XServer...</property>
+			  <property name="label" translatable="yes">Configure _X Server...</property>
 			  <property name="use_underline">True</property>
 			  <property name="relief">GTK_RELIEF_NORMAL</property>
 			  <property name="focus_on_click">True</property>
@@ -5508,7 +5388,7 @@ Random from selected
 <widget class="GtkDialog" id="xserver_dialog">
   <property name="border_width">5</property>
   <property name="visible">True</property>
-  <property name="title" translatable="yes">XServer Login Window Preferences</property>
+  <property name="title" translatable="yes">X Server Login Window Preferences</property>
   <property name="type">GTK_WINDOW_TOPLEVEL</property>
   <property name="window_position">GTK_WIN_POS_CENTER_ON_PARENT</property>
   <property name="modal">False</property>
@@ -5532,6 +5412,19 @@ Random from selected
 	<widget class="GtkHButtonBox" id="dialog-action_area3">
 	  <property name="visible">True</property>
 	  <property name="layout_style">GTK_BUTTONBOX_END</property>
+
+	  <child>
+	    <widget class="GtkButton" id="button1">
+	      <property name="visible">True</property>
+	      <property name="can_default">True</property>
+	      <property name="can_focus">True</property>
+	      <property name="label">gtk-help</property>
+	      <property name="use_stock">True</property>
+	      <property name="relief">GTK_RELIEF_NORMAL</property>
+	      <property name="focus_on_click">True</property>
+	      <property name="response_id">-11</property>
+	    </widget>
+	  </child>
 
 	  <child>
 	    <widget class="GtkButton" id="closebutton3">
@@ -5564,7 +5457,7 @@ Random from selected
 	  <child>
 	    <widget class="GtkLabel" id="xserver_informationlabel">
 	      <property name="visible">True</property>
-	      <property name="label" translatable="yes">&lt;b&gt;Warning:&lt;/b&gt;  Using an invalid value could stop the XServer from restarting.  The gdm service will require a restart before changes take effect.</property>
+	      <property name="label" translatable="yes">&lt;b&gt;Warning:&lt;/b&gt;  Incorrect settings could prevent the X server from restarting.  Changes to these settings will not take effect until gdm is restarted.</property>
 	      <property name="use_underline">False</property>
 	      <property name="use_markup">True</property>
 	      <property name="justify">GTK_JUSTIFY_LEFT</property>
