@@ -1,3 +1,11 @@
+2005-12-03  Dennis Cranston  <dennis_cranston@yahoo.com>
+
+	* gui/gdmsetup.c: (gg_selection_changed), (read_themes),
+	(xserver_button_clicked), (setup_local_themed_settings),
+	(setup_remote_themed_settings), (setup_gui):
+	* gui/gdmsetup.glade:  First set of UI changes as 
+	recommended by Calum Benson. 
+
 2005-12-02  Brian Cameron  <brian.cameron@sun.com>
 
 	* README, daemon/gdm.h:  More clear stability
